feat(media): add auth probe endpoint